# cs50

./: .gitignore  CMakeLists.txt  build.ninja  buildvc2017.bat  codewars.cpp  cpy.cpp  digitize.cpp  operators.cpp  pair_array_set.cpp  setenv.bat  testbuild.bat
watcom/: setenv.bat
